--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Jesse
+name: Jesse Steinweg-Woods
 
 # Short bio or description (displayed in the header)
-description: Testing this
+description: Ph.D. Student and Data Science Enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: /images/SVM_image.png
 
 #
 # Flags below are optional
