Update header for career info

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jesse Steinweg-Woods
 
 # Short bio or description (displayed in the header)
-description: Ph.D. Candidate in Atmospheric Science and Data Science Enthusiast
+description: Data Scientist and Ph.D. Candidate in Atmospheric Science
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/SVM_image.png
