--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Jesse Steinweg-Woods
+name: Jesse Steinweg-Woods, Ph.D.
 
 # Short bio or description (displayed in the header)
-description: Data Scientist and Ph.D. Candidate in Atmospheric Science
+description: Data Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/SVM_image.png
