--- a/_config.yml
+++ b/_config.yml
@@ -52,8 +52,8 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-markdown: redcarpet
-highlighter: pygments
+markdown: kramdown # Kramdown is the new default starting May 1, 2016
+highlighter: rouge # Added this so that Pygments doesn't cause problems
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
